fixed sharesheet if title too long

--- a/src/components/InfoCard/ShareSheet.scss
+++ b/src/components/InfoCard/ShareSheet.scss
@@ -1,3 +1,4 @@
+@import '../../styles/Colors.scss';
 .kr-share-sheet {
     position: absolute;
     bottom: 0;
@@ -7,6 +8,8 @@
     background: #fff;
     transition: transform 300ms;
     transform: translateY(100%);
+    border-top: 1px solid $brand-blue;
+    box-shadow: 0 -5px 5px rgba(0,0,0,.075);
 
     &__show {
         transform: translateY(0);
@@ -22,5 +25,12 @@
 
     &--item {
         display: inline-block;
+    }
+
+    &--close {
+        position: absolute;
+        right: 1rem;
+        top: 1rem;
+        cursor: pointer;
     }
 }
